1.60  Mon, Aug 19, 2011
  - Clean up MANIFEST before creating a new one.

1.59  Mon, Aug 8, 2011
  - Prevent mixing non-native and native newlines in MANIFEST files

1.58  Sun, Nov 21, 2009
  - add MYMETA files to default skip list:
     http://rt.cpan.org/Ticket/Display.html?id=50923
    (suggested by DAGOLDEN)
  - Avoid Devel::Cover and Devel::CoverX::Covered files
    (suggested by daxim)

1.57  Sat, Sep 19, 2009
  - Enhancements to MANIFEST.SKIP from Module::Build:
     http://rt.cpan.org/Ticket/Display.html?id=47401
  - ExtUtils::Manifest::maniskip() incorrectly parses some
    lines with comments and internal whitespace filenames:
      http://rt.cpan.org/Ticket/Display.html?id=45016

1.56  Sun, Jan 4, 2009
  - Add support for VMS in Unix or extended character set mode:
     https://rt.cpan.org/Ticket/Display.html?id=42146

1.55  Sun, Oct 12, 2008
  - test nit with space in filename on VMS:
      http://rt.cpan.org/Ticket/Display.html?id=39934
    Patch supplied by CBERRY
  - add .gitignore to MANIFEST.SKIP:
       http://rt.cpan.org/Ticket/Display.html?id=39823
    Suggested by MSCHWERN

1.54  Tue, Jun 3, 2008
  - make maniskip a public routine, and allow an argument to
    override $mfile (patch supplied by Ricardo Signes)
  - fix VMS test failures:
      http://rt.cpan.org/Ticket/Display.html?id=25377

1.53  Thu, May 29, 2008
  - forgot to update META.yml

1.52  Thu, Mar 25, 2008
  - apply doc changes, as suggested:
      http://rt.cpan.org/Ticket/Display.html?id=28361
  - allow spaces in filenames when quoted:
      http://rt.cpan.org/Ticket/Display.html?id=34414
    Patch supplied by sthoenna at efn.org
  - patch for cp_if_diff to return if file not found:
      http://rt.perl.org/rt3/Public/Bug/Display.html?id=36576

1.51  Tue, Jan 9, 2007
  - apply chmod patch supplied by TONYC:
      http://rt.cpan.org/Ticket/Display.html?id=13079

1.50  Fri, Dec 22, 2006
  - add recognition of two directives in one's own MANIFEST.SKIP:
       #!include_default